@@ -1,3 +1,8 @@
+Mon Sep 18 11:50:51 2000  Owen Taylor  <otaylor@redhat.com>
+
+	* gtk/gtktextlayout.c (add_preedit_attrs): Handle
+	empty attribute lists properly.
+
 Sun Sep 17 10:08:16 2000  Owen Taylor  <otaylor@redhat.com>
 
 	* gtk/queryimmodules.c (main): Return non-zero exit
